spacing issue with triangle
space between overlay and input

--- a/1028_registration/accounts.css
+++ b/1028_registration/accounts.css
@@ -99,7 +99,7 @@ li:not(#uprCase) {
 }
 #psswrdTest {
 	position: absolute;
-	top: -1.2em;
+	top: -1em;
 	right: 0;
 	text-align: center;
 }
